# miden-examples

./: README.md
book/book/: 404.html  create_deploy_tutorial.html  deploying_counter_contract.html  index.html  miden_node_setup_tutorial.html  mint_consume_send_tutorial.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js  tutorials_summary.html
book/src/: SUMMARY.md  create_deploy_tutorial.md  deploying_counter_contract.md  miden_node_setup_tutorial.md  mint_consume_send_tutorial.md  tutorials_summary.md
docs/: create_deploy_tutorial.md  create_mint_consume_tutorial.md  mint_consume_send_tutorial.md
masm/accounts/: counter.masm  math.masm
masm/notes/: counter_note.masm
masm/scripts/: counter_script.masm  math_script.masm
node/: README.md
node/config/: genesis.toml
rust-client/: Cargo.toml  README.md  miden-client.toml
rust-client/docs/: create_mint_consume.md  miden_node_setup_tutorial.md
rust-client/src/: common.rs
web-client/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web-client/src/: App.css  App.tsx
web-client/src/components/: AccountSelector.tsx  ClientSection.tsx  DatabaseSection.tsx  FaucetSection.tsx  MintTokensSection.tsx  NotesSection.tsx  SendTokensSection.tsx  SyncSection.tsx  WalletSection.tsx  WalletsTableSection.tsx
web-client/src/hooks/: useMidenDemo.ts
web-client/src/lib/: clearDB.ts  consumeNotes.ts  createClient.ts  createFaucet.ts  createWallet.ts  disperseTokens.ts  getConsumableNotes.ts  getWalletDetails.ts  mintTokens.ts  sendTokens.ts  syncState.ts
