[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { version = "0.6", features = ["testing", "concurrent", "tonic", "sqlite"] }
async-trait = "0.1"
miden-lib = { version = "0.6", default-features = false }
miden-objects = { version = "0.6", default-features = false }
miden-tx = { version = "0.6", default-features = false, features = ["async"] }
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros"] }
tracing = { version = "0.1" }
figment = { version = "0.10", features = ["toml", "env"] }
miden-crypto = { version = "0.13.0", features = ["executable"] }
